# zpart

./: .gitignore  CMakeLists.txt  LICENSE  README.md  graph.c  graph.h  main.c
src/: graph.c  graph.h  main.c  part.c  part.h  timer.h
